# xdsl-aie

./: README.md  pyproject.toml
.github/workflows/: ci-aie.yml  ci-core.yml  ci-pyright.yml
tests/filecheck/: lit.cfg
tests/filecheck/dialects/: aie.mlir
tests/filecheck/dialects/aie/: device_op.mlir  dma_bd_ops.mlir  object_fifo_op.mlir  ops.mlir  tile_op.mlir
tests/filecheck/dialects/aiex/: dma-tasks.mlir  ops.mlir
xdsl_aie/: xdsl-aie-opt
xdsl_aie/dialects/: __init__.py  aie.py  aiex.py
xdsl_aie/tools/: xdsl_aie_main.py
xdsl_aie/transforms/: __init__.py
