[project]
name = "xdsl-aie"
description = "xDSL with MLIR-AIE dialect extensions"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }
version = "0.0.1"

dependencies = [
    "xdsl @ git+https://github.com/xdslproject/xdsl.git@3c3b445a97119b8e34fdca5037c7d72efdf21e34",
]

[project.optional-dependencies]
dev = [
    "xdsl[dev] @ git+https://github.com/xdslproject/xdsl.git@3c3b445a97119b8e34fdca5037c7d72efdf21e34",
]

[project.scripts]
xdsl-aie-opt = "xdsl_aie.tools.xdsl_aie_main:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyright]
reportImportCycles = false
reportMissingModuleSource = false
enableTypeIgnoreComments = false
enableExperimentalFeatures = true
typeCheckingMode = "strict"
"include" = ["xdsl_aie"]

[tool.ruff]
target-version = "py310"
extend-include = ["*.ipynb", "*.pyi"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "PT", "TID251"]
ignore = [
    "E741",  # https://beta.ruff.rs/docs/rules/ambiguous-variable-name/
    "PT006", # https://beta.ruff.rs/docs/rules/pytest-parametrize-names-wrong-type/
    "PT011", # https://beta.ruff.rs/docs/rules/pytest-raises-too-broad/
    "PT012", # https://beta.ruff.rs/docs/rules/pytest-raises-with-multiple-statements/
]

[tool.ruff.lint.pycodestyle]
max-line-length = 120
